<?xml version="1.0"?>
<package format="2">
  <name>laser_slam</name>
  <version>0.0.1</version>
  <description>laser_slam</description>

  <maintainer email="rdube@ethz.ch">Renaud Dubé</maintainer>
  <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>doxygen_catkin</depend>
  <depend>gtsam_catkin</depend>
  <depend>libpointmatcher</depend>
  <depend>mincurves</depend>
  <depend>minkindr</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
