<?xml version="1.0"?>
<package>
  <name>velodyne_assembler</name>
  <version>0.0.1</version>
  <description>velodyne_assembler</description>
  
  <author email="philipp.kruesi@mavt.ethz.ch">Philipp Krüsi</author>
  
  <maintainer email="rdube@ethz.ch">Renaud Dubé</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libpointmatcher</build_depend>
  <build_depend>libpointmatcher_ros</build_depend>

</package>
